test/arrays/ferguson/array-of-owned/array-of-owned-error6.good
array-of-owned-error6.chpl:5: In function 'main':
array-of-owned-error6.chpl:9: error: invalid copy-initialization
array-of-owned-error6.chpl:9: error: Cannot copy-initialize array because element type 'owned C' cannot be copy-initialized
